--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
+bleach==1.5.0
 certifi==2017.11.5
 chardet==3.0.4
 cymem==1.31.2
 cytoolz==0.8.2
 decorator==4.1.2
 dill==0.2.7.1
+enum34==1.1.6
 ftfy==4.4.3
-html5lib==0.999999999
+html5lib==0.9999999
 idna==2.6
 ipykernel==4.6.1
 ipython==6.2.1
@@ -13,6 +15,8 @@ ipython-genutils==0.2.0
 jedi==0.11.0
 jupyter-client==5.1.0
 jupyter-core==4.4.0
+Keras==2.0.9
+Markdown==2.6.9
 murmurhash==0.26.4
 numpy==1.13.3
 pandas==0.21.0
@@ -23,10 +27,12 @@ pickleshare==0.7.4
 plac==0.9.6
 preshed==1.0.0
 prompt-toolkit==1.0.15
+protobuf==3.4.0
 ptyprocess==0.5.2
 Pygments==2.2.0
 python-dateutil==2.6.1
 pytz==2017.3
+PyYAML==3.12
 pyzmq==16.0.3
 regex==2017.9.23
 requests==2.18.4
@@ -35,6 +41,8 @@ scipy==1.0.0
 simplegeneric==0.8.1
 six==1.11.0
 spacy==1.9.0
+tensorflow==1.4.0
+tensorflow-tensorboard==0.4.0rc2
 termcolor==1.1.0
 thinc==6.5.2
 toolz==0.8.2
@@ -45,4 +53,5 @@ ujson==1.35
 urllib3==1.22
 wcwidth==0.1.7
 webencodings==0.5.1
+Werkzeug==0.12.2
 wrapt==1.10.11
